--- a/demo/package.json
+++ b/demo/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.5.16",
     "vue-good-table": "^2.12.2",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.16.0",
     "vuetify": "^1.2.0"
   },
   "devDependencies": {
